src/main.scss
@import '@/style/theme.scss';
@import '@/style/fonts.scss';
@import '@/style/mixins.scss';

* {
  /* Firefox */
  scrollbar-width: thin;
  scrollbar-color: darkgrey transparent;

  /* Chrome & Safari & Edge */
  &::-webkit-scrollbar {
    width: 5px;
    height: 5px;
  }

  &::-webkit-scrollbar-track {
    background-color: transparent;
  }

  &::-webkit-scrollbar-thumb {
    background-color: darkgrey;
    border-radius: 5px;
  }
}

html,
body {
  min-height: 100vh;
  margin: 0;
  padding: 0;
  width: 100%;
}

#root {
  min-height: inherit;
}

p,
h1,
h2,
h3 {
  margin: 0;
}

p {
  letter-spacing: 0.2px;
}

.okp4-dataverse-portal-main-layout {
  @include with-theme() {
    min-height: inherit;
    max-height: 100vh;
    display: flex;
    width: 100%;
    background-color: themed('background');
    position: relative;
    overflow: hidden;
  }

  .okp4-dataverse-portal-page-layout {
    @include twelve-column-layout;
    flex: 1;
    grid-template-rows: max-content;
    width: 100%;
    min-height: inherit;
    row-gap: 15px;

    @include use-breakpoints(('mobile')) {
      &.expanded-sidebar {
        @include blurred-page(1px);
        position: absolute;
        left: 299px;
        height: 100%;
      }
    }

    @include use-breakpoints(('tablet')) {
      row-gap: 48px;

      &.expanded-sidebar {
        @include blurred-page(1px);
        position: absolute;
        left: 376px;
        height: 100%;
      }
    }

    .okp4-dataverse-portal-toolbar-wrapper,
    .okp4-dataverse-portal-page-wrapper {
      @include use-breakpoints(('mobile')) {
        padding: 0 4.2%;
      }

      @include use-breakpoints(('tablet')) {
        padding: 0 3.1%;
      }

      @include use-breakpoints(('desktop')) {
        padding: 0 2.4%;
      }

      @include use-breakpoints(('large-desktop')) {
        padding: 0 3.1%;
      }
    }

    .okp4-dataverse-portal-toolbar-wrapper {
      @include grid-item($colStart: 1, $colEnd: -1, $rowStart: 1, $rowEnd: 1);
      padding-top: 25px;

      @include use-breakpoints(('mobile', 'tablet')) {
        padding-top: 44px;
      }
    }

    .okp4-dataverse-portal-page-wrapper {
      @include grid-item($colStart: 1, $colEnd: -1, $rowStart: 2, $rowEnd: auto);
      overflow-y: auto;
      padding-bottom: 25px;

      @include use-breakpoints(('mobile', 'tablet')) {
        padding-bottom: 44px;
      }
    }
  }
}

